--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -71,7 +71,7 @@
 }
 
 .btn-yours-4 {
-   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   color: black;
   background: #ffdc5e;
@@ -156,4 +156,15 @@
   text-decoration: none;
   color: blueviolet;
   background: #ffe67d;
+}
+
+.form-control {
+  border: 1px solid #8240ff;
+  &:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: rgb(130, 64, 255);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(130, 64, 255, 0.25);
+  }
 }
