--- a/app/assets/stylesheets/components/_calender.scss
+++ b/app/assets/stylesheets/components/_calender.scss
@@ -5,8 +5,10 @@
   .today {
     background-color: white;
   }
+  .day {
+    height: 50px;
+  }
 }
-
 
 .form-entrevista {
   background-color: white;
@@ -28,7 +30,6 @@
   border: none;
   background: none;
 }
-
 
 .tabla_calendario tr {
   background: none;
@@ -53,4 +54,19 @@
 
 .simple-calendar .next-month {
   background: none;
+}
+
+.calendar-container {
+  width: 300px;
+  display: inline-block;
+}
+
+.fa-angle-right,
+.fa-angle-left {
+  color: #8240ff;
+  font-size: 20px;
+}
+
+.calendar-title {
+  color: #8240ff;
 }
