--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -5,11 +5,12 @@
 
 <div class='container-register'>
   <h1 class="text-center">Programa tu reunión</h1>
-  <div class="form-entrevista">
+  <div class="form-entrevista text-center">
     <h4>Días disponibles</h4>
     <div class="calendar-container">
-      <%= month_calendar(events: @meetings, end_attribute: :end_time) do |date, meetings| %>
-        <%= date %>
+      <%= simple_form_for [@interview] do |f| %>
+        <%= f.input :date, label: 'Elige una fecha' %>
+        <%= f.button :submit, class: 'btn btn-primary', value: 'Reserva' %>
       <% end %>
     </div>
   </div>
