--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -2,7 +2,7 @@ i {
   transition: all .2s ease-in;
 }
 a {
-    color: #8240ff;
+    color: #a371ff;
     text-decoration: none;
     background-color: transparent;
     &:hover {
@@ -27,7 +27,7 @@ a {
 //   color: #ffffff !important;
 // }
 .nav-pills .nav-link.active{
-  color: #8240ff;
+  color: #7124ff;
   background-color: #ffffff !important;
   i {
     font-size: 24px;
