--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -6,6 +6,10 @@
         <h3>
           Bi.Thesis
         </h3>
+
+
+
+
       </div>
     <% end %>
   </div>
@@ -30,7 +34,6 @@
 
     <div class="bar-space">
     </div>
-
       <!-- Inicio tabla datos alummni -->
       <div class="container">
         <h1>Tus asesorados</h1>
@@ -63,5 +66,6 @@
 <!-- Fin de la tabla datos alummnis -->
     
   </div>
-  <!-- Fin de la tabla datos alummnis -->
+</div>
+
 </div>
