--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,7 +10,7 @@
 
 .btn-yours:hover {
   text-decoration: none;
-  color: blueviolet;
+  color: blue;
   background: #ffe67d;
 }
 
@@ -21,16 +21,6 @@
   height: 40px;
   border: none !important;
   margin: 0 auto;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  color: black;
-  border-radius: 20px;
-  text-decoration: none;
-}
-.btn-registro:hover {
-  text-decoration: none;
-  color: blueviolet;
-  background: #ffe67d;
 }
 
 .center {
@@ -51,7 +41,7 @@
 
 .btn-yours-2:hover {
   text-decoration: none;
-  color: blueviolet;
+  color: blue;
   background: #ffe67d;
 }
 
@@ -71,8 +61,7 @@
 }
 
 .btn-yours-4 {
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.19);
   color: black;
   background: #ffdc5e;
   padding: 10px 20px;
@@ -83,7 +72,7 @@
 
 .btn-yours-4:hover {
   text-decoration: none;
-  color: blueviolet;
+  color: black;
   background: #ffe67d;
 }
 
@@ -101,7 +90,7 @@
 
 .btn-edit-1:hover {
   text-decoration: none;
-  color: blueviolet;
+  color: blue;
   background: #ffe67d;
 }
 
@@ -119,7 +108,7 @@
 }
 .btn-edit-2:hover {
   text-decoration: none;
-  color: blueviolet;
+  color: blue;
   background: #ffe67d;
 }
 
@@ -139,32 +128,4 @@
   text-decoration: none;
   color: blueviolet;
   background: #ffe67d;
-}
-
-.btn-reservar {
-  color: black;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  background: #ffdc5e;
-  padding: 9px 20px;
-  border-radius: 16px;
-  text-decoration: none;
-  border: none !important;
-}
-
-.btn-reservar:hover {
-  text-decoration: none;
-  color: blueviolet;
-  background: #ffe67d;
-}
-
-.form-control {
-  border: 1px solid #8240ff;
-  &:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: rgb(130, 64, 255);
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(130, 64, 255, 0.25);
-  }
 }
