--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,18 +1,11 @@
-<div class="espacio-navbar">
-</div>
-<div class="background-perfil">
-</div>
-<div class="container-reunion">
-  <div class="title-perfil text-center">
-    <h1>Elige tu día y hora de reunión</h1>
-  </div>
-  <div class="card-reunion">
-    <div class='form'>
-      <%= simple_form_for [@meeting] do |f| %>
-        <%= f.input :start_time, label: 'Inicio' %>
-        <%= f.input :end_time, label: 'Final' %>
-        <p class="text-center mt-4"><%= f.button :submit, action: "/lines", class: 'btn-reservar ', value: 'Reservar' %></p>
-      <% end %>
-    </div>
+
+<div class="container">
+  <div class='form'>
+  <h1>Elige tu día de reservación</h1>
+    <%= simple_form_for [@meeting] do |f| %>
+      <%= f.input :start_time, label: 'Elige una hora' %>
+       <%= f.input :end_time, label: 'Elige una hora' %>
+      <%= f.button :submit, class: 'btn btn-primary', value: 'Reserva' %>
+    <% end %>
   </div>
 </div>
