--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -341,7 +341,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-solid fa-paper-plane"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Enter text here...">
+                            <input type="text" class="form-control" placeholder="Enviar un mensaje...">
                         </div>
                     </div>
                   </div>
