--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -1,13 +1,13 @@
-.card {
-  background: #fff;
-  transition: 0.5s;
-  border: 0;
-  margin-bottom: 30px;
-  border-radius: 0.55rem;
-  position: relative;
-  width: 100%;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-}
+// .card {
+//   background: #fff;
+//   transition: 0.5s;
+//   border: 0;
+//   margin-bottom: 30px;
+//   border-radius: 0.55rem;
+//   position: relative;
+//   width: 100%;
+//   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+// }
 .chat-app .people-list {
   width: 280px;
   position: absolute;
