--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <div class="background-perfil">
 </div>
 
-<div class='container-register'>
+<div class='container-register-2'>
   <div class="title-perfil text-center">
     <h1>Primero completa el siguiente formulario</h1>
   </div>
