--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,7 +10,7 @@
 
 .btn-yours:hover {
   text-decoration: none;
-  color: blue;
+  color: blueviolet;
   background: #ffe67d;
 }
 
@@ -21,6 +21,13 @@
   height: 40px;
   border: none !important;
   margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.btn-registro:hover {
+  text-decoration: none;
+  color: blueviolet;
+  background: #ffe67d;
 }
 
 .center {
@@ -41,7 +48,7 @@
 
 .btn-yours-2:hover {
   text-decoration: none;
-  color: blue;
+  color: blueviolet;
   background: #ffe67d;
 }
 
@@ -61,21 +68,21 @@
 }
 
 .btn-yours-4 {
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.19);
   color: black;
   background: #ffdc5e;
   padding: 10px 20px;
   border-radius: 20px;
   text-decoration: none;
   width: 120px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .btn-yours-4:hover {
   text-decoration: none;
-  color: black;
+  color: blueviolet;
   background: #ffe67d;
 }
-
 .btn-edit-1 {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
@@ -90,7 +97,7 @@
 
 .btn-edit-1:hover {
   text-decoration: none;
-  color: blue;
+  color: blueviolet;
   background: #ffe67d;
 }
 
@@ -108,7 +115,7 @@
 }
 .btn-edit-2:hover {
   text-decoration: none;
-  color: blue;
+  color: blueviolet;
   background: #ffe67d;
 }
 
@@ -128,4 +135,26 @@
   text-decoration: none;
   color: blueviolet;
   background: #ffe67d;
+}
+
+.btn-reservar {
+  color: black;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  background: #ffdc5e;
+  padding: 9px 20px;
+  border-radius: 16px;
+  text-decoration: none;
+  border: none !important;
+}
+
+.btn-reservar:hover {
+  text-decoration: none;
+  color: blueviolet;
+  background: #ffe67d;
+}
+
+.icono-check {
+  color: #1cd1a1;
+  font-size: 100px;
 }
