cambios en dashboard y boton de subir archivos

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -204,3 +204,32 @@
   color: #1cd1a1;
   font-size: 100px;
 }
+
+.upload-file {
+  position: relative;
+  display: inline-block;
+}
+
+.upload-file::before {
+  cursor: pointer;
+  background-color: #8240FF;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  border: 0px;
+  content: 'Seleccionar archivo';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.upload-file input[type="file"] {
+  opacity: 0;
+  width: 200px;
+  height: 32px;
+  display: inline-block;
+}
