--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="espacio-navbar">
 </div>
-<div class="background-perfil">
+<div class="background-perfil-2">
 </div>
 
 <div class='container-register-2'>
