--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -107,7 +107,7 @@ padding: 20px;
   box-shadow: 0 0 5px #b48bff;
   padding: 25px 25px;
   border-radius: 5px;
-  height: 70vh;
+  min-height: 80vh;
   overflow: auto;
 }
 
@@ -117,7 +117,7 @@ padding: 20px;
 }
 
 .container-dashboard {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
 }
@@ -167,4 +167,18 @@ padding: 20px;
     border-bottom: 1px solid #D7C3FF;
     margin-bottom: 20px;
   }
+}
+
+.container-upload {
+  text-align: center;
+  padding: 10px 50px;
+}
+
+.fa-file-word {
+  font-size: 24px;
+  color: #1EDD88;
+}
+
+.container-file {
+  margin-top: 20px;
 }
