--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -105,10 +105,10 @@ input {
   font-weight: lighter !important;
 }
 
-.background-perfil {
+.background-perfil-2 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-  height: 300px;
+  height: 450px;
   background-position: 38%;
   background-size: cover;
 }
@@ -171,7 +171,7 @@ input {
 .container-register-2 {
   width: 60%;
   margin: 0 auto;
-  margin-top: -300px;
+  margin-top: -220px;
   h1 {
     font-weight: bold;
     color: white;
