--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -2,7 +2,7 @@
   background-color: white;
   padding: 30px 20px;
   border-right: 1px solid #eadeff;
-  overflow: auto;
+  width: 100px;
   a:hover {
     text-decoration: none;
   }
