--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -61,3 +61,11 @@
   </div>
   <!-- Fin de la tabla datos alummnis -->
 </div>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    swal("Bienvenido <%= current_user.first_name %>", 'Te has logeado correctamente', 'success', {
+          buttons: false,
+          timer: 2500,
+        });
+</script>
